# DreamsRNS-ROCm-LUMI

./: .gitignore  LUMI_SCHEDULE.md  README.md  ROCM_UPDATE_CHANGELOG.md  pyproject.toml
6F5Sweeps/: cmf_6f5.json  make_level2_tasks_from_shard_hitlist.py  manifest_template.json  sbatch_launch_level2_array_lumi.sh  sbatch_level1_lumi.sh  sbatch_level2_array_worker_lumi.sh  sbatch_make_level2_lumi.sh  sbatch_postprocess_lumi.sh  submit_pipeline_lumi.sh  sweep_meta.json  worker_level2_from_jobs.py  worker_variantB_skeleton.py
6f5sweep_level1/: 6f5_level1.def  README.md  cmf_walk_engine.py  cmfs_level1.jsonl  coverage_template.json  manifest_template.json  postprocess_level1.py  requirements.txt  sbatch_level1.sh  sbatch_postprocess.sh  submit_level1.sh  sweep_meta.json  tasks_6f5_zeta5_shifts.jsonl  worker_variantB_skeleton.py
6f5sweep_level2/: README.md  cmf_walk_engine.py  precision_engine.py  sbatch_launch_level2_array.sh  sbatch_level2_worker.sh  sbatch_make_level2_jobs.sh  submit_level2.sh  worker_level2_from_jobs.py
configs/: lumi_1node_8gpu.yaml  mac_local_test.yaml  triage.yaml
dreams_rocm/: __init__.py  cmf_compile.py  cmf_generator.py  cmf_walk.py  constants.py  exhaust.py  gpu_runner.py  logging.py  runner.py  shifts.py  trajectories.py
dreams_rocm/crt/: __init__.py  delta_targets.py  full_crt_cpu.py  partial_crt.py
dreams_rocm/rns/: __init__.py  bindings.py  reference.py
dreams_rocm/rns/tests/: test_gpu_smoke.py  test_partial_crt.py  test_rns_ops.py
env/: dreams_rocm.def  lumi_modules.sh  requirements-rocm.txt  requirements.txt
rns_rocm_lib/: .gitignore  CMakeLists.txt  README.md
rns_rocm_lib/.github/workflows/: ci.yml
rns_rocm_lib/docs/: ROADMAP.md
rns_rocm_lib/examples/: demo_cmf_pipeline.cpp  demo_crt_matrix.cpp  demo_gemm.cpp
rns_rocm_lib/include/rns/: barrett.h  config.h  crt.h  crt_approx.h  crt_types.h  gpu_crt.h  io.h  modops.h  montgomery.h  mpi_support.h  primes.h  rns_api.h  rns_eval.h  rns_kernels.h  rns_matmul.h  rns_ops.h  rns_tensor.h  rns_types.h  rns_walk.h  topk.h  utils.h
rns_rocm_lib/python/: CMakeLists.txt  pyproject.toml  rns_bindings.cpp  setup.py
rns_rocm_lib/python/rns/: __init__.py  sympy_compiler.py
rns_rocm_lib/python/tests/: test_rns_python.py
rns_rocm_lib/scripts/: format.sh  gen_gemm_kernels.py  run_tests.sh
rns_rocm_lib/src/: c_api.cpp  crt.cpp  io.cpp  primes.cpp  rns_api.cpp  rns_eval_cpu.cpp  rns_walk_cpu.cpp  topk_cpu.cpp  utils.cpp
rns_rocm_lib/src/hip/: modops.hip  rns_eval_bytecode.hip  rns_kernels.hip  rns_matmul_m10.hip  rns_matmul_m4.hip  rns_matmul_m6.hip  rns_matmul_m8.hip  rns_walk_fused.hip  topk.hip
rns_rocm_lib/tests/: test_crt.cpp  test_crt_approx.cpp  test_crt_matrix.cpp  test_eval_bytecode.cpp  test_gemm_mod.cpp  test_modops.cpp  test_montgomery.cpp  test_primes.cpp  test_rns_ops.cpp  test_topk.cpp  test_walk.cpp
scripts/: build_rns_lib.sh  euler2ai_verify.py  generate_exhaust_tasks.py  generate_sweep_data.py  make_tasks.py  run_local_mac.py  run_mpi_sweep.py  sbatch_1node_8gpu.sh  validate_rocm_rns.py
